--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,8 +2,8 @@
 ## CHANGE THESE
 ############################
 
-baseURL: "https://Daniel-wambua.github.io/blogz"
-title: blogz
+baseURL: "https://havocsec.me/blogz"
+title: Havoc Blogs
 
 ############################
 ## MISC
