--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,7 +2,7 @@
 ## CHANGE THESE
 ############################
 
-baseURL: "https://havoc.github.io/blogz"
+baseURL: "https://havocsec.github.io/blogz"
 title: Havoc Blogs
 
 ############################
