--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,7 @@
 ############################
 
 baseURL: "https://havocsec.me"
-title: Havoc Blogs
+title: Havoc Hacking Articles
 
 ############################
 ## MISC
