--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 author:
   name: Richie-Havoc
   image: author.png
-  greeting: "Ethical Hacker | Security Researcher | Developer | Pentester | CTF Player :tada:"
+  greeting: "Security Researcher | Student | Pentester | CTF Player :tada:"
   icon: ":wave:"
 
 ############################
@@ -16,7 +16,7 @@ links:
   - github: https://github.com/Daniel-wambua/blogz
   - link: https://github.com/Daniel-wambua/blogz#readme
   - signal: https://signal.me/#eu/N2acU1DF0_iC_eFAJ-zg32OfVaLiRwts-HlDEQ1elCfAvfi4261Bh49PbPhwzZFQ
-  - website: https://havocsec.tech
+  - website: https://havocsec.me
   - linkedin: https://www.linkedin.com/in/daniel-wambua-a312b32b8/
   - whatsapp: +254 111 976984
   - telegram: +254 111 976984
